--- a/Back/package.json
+++ b/Back/package.json
@@ -1,21 +1,23 @@
 {
-    "name": "serveur",
-    "version": "1.0.0",
-    "description": "serveur de la Wild",
-    "main": "app.js",
-    "scripts": {
-        "start": "nodemon app.js"
-    },
-    "author": "wilder",
-    "dependencies": {
-        "body-parser": "^1.18.2",
-        "dotenv": "^8.1.0",
-        "express": "^4.16.3",
-        "morgan": "^1.9.0",
-        "mysql": "^2.17.1",
-        "mysql2": "^1.7.0",
-        "nodemon": "^1.19.2",
-        "npm": "^6.11.3",
-        "pg": "^7.12.1"
-    }
+  "name": "serveur",
+  "version": "1.0.0",
+  "description": "serveur de la Wild",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
+  "author": "wilder",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "dotenv": "^8.1.0",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "mysql": "^2.17.1",
+    "mysql2": "^1.7.0",
+    "nodemon": "^1.19.2",
+    "npm": "^6.11.3",
+    "pg": "^7.12.1"
+  },
+  "devDependencies": {},
+  "license": "ISC"
 }
