--- a/Front/package.json
+++ b/Front/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropdown-select": "^3.6.3",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
