--- a/Front/package.json
+++ b/Front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-dropdown-select": "^3.6.3",
