--- a/Back/package.json
+++ b/Back/package.json
@@ -9,6 +9,7 @@
   "author": "wilder",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
